--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
+    "react-scroll-horizontal": "^1.6.6",
     "react-typical": "^0.1.3",
     "tachyons": "^4.12.0",
     "web-vitals": "^1.1.2"
